Add "Set server IP" menu item